--- a/frontend/src/config/shared/translation/english.json
+++ b/frontend/src/config/shared/translation/english.json
@@ -93,8 +93,7 @@
   "Recommended actions": "Recommended actions",
   "Ref. period": "Ref. period",
   "Regions": "Regions",
-  "Remove Admin 1": "Remove Admin 1",
-  "Remove Admin 2": "Remove Admin 2",
+  "Remove {{adminLevel}}": "Remove {{adminLevel}}",
   "Remove layer": "Remove layer",
   "Reverse colors": "Reverse colors",
   "Rows Per Page": "Rows Per Page",
