--- a/frontend/src/config/shared/translation/french.json
+++ b/frontend/src/config/shared/translation/french.json
@@ -203,16 +203,12 @@
     "Compare Locations": "Comparer les emplacements",
     "Country": "Pays",
     "Admin 1": "Zones administratives  de niveau 1",
-    "Regional Bureau Dakar": "Bureau Régional Dakar",
-    "Remove Admin 1": "Supprimer zones administratives  de niveau 1",
+    "Admin 0": "Pays",
     "Admin 2": "Zones administratives  de niveau 2",
-    "Remove Admin 2": "Supprimer  zones administratives  de niveau 1",
+    "Remove {{adminLevel}}": "Supprimer {{adminLevel}}",
     "Compare Periods": "Comparer les périodes",
     "Select Charts": "Sélectionner des graphiques",
     "Admin Levels": "Niveaux Administratifs",
-    "Level 2": "Niveau 2",
-    "Level 1": "Niveau 1",
-    "Level 0": "Niveau 0",
     "View Table": "Voir le tableau",
     "Download CSV": "Télécharger CSV",
     "Rows Per Page": "Lignes par page",
