--- a/frontend/src/config/shared/translation/portuguese.json
+++ b/frontend/src/config/shared/translation/portuguese.json
@@ -218,8 +218,7 @@
   "LOCATION 2": "LOCALIZAÇÃO 2",
   "Admin 1": "Província",
   "Admin 2": "Distrito",
-  "Remove Admin 1": "Remover província",
-  "Remove Admin 2": "Remover distrito",
+  "Remove {{adminLevel}}": "Remover {{adminLevel}}",
   "Select Charts": "Selecione os gráficos",
   "Compare Periods": "Comparar períodos",
   "PERIOD 1": "PERÍODO 1",
