--- a/frontend/src/config/shared/translation/somali.json
+++ b/frontend/src/config/shared/translation/somali.json
@@ -177,8 +177,7 @@
     "LOCATION 2": "GOOBTA 2",
     "Admin 1": "Maamulka 1",
     "Admin 2": "Maamulka 2",
-    "Remove Admin 1": "Ka saar Admin 1",
-    "Remove Admin 2": "Ka saar Admin 2",
+    "Remove {{adminLevel}}": "Ka saar {{adminLevel}}",
     "Select Charts": "Dooro jaantusyada",
     "Compare Periods": "Isbarbardhig Xilliyada",
     "PERIOD 1": "MUDDADA 1",
