--- a/frontend/src/config/shared/translation/french.json
+++ b/frontend/src/config/shared/translation/french.json
@@ -356,5 +356,7 @@
     "4 Days": "4 jours",
     "5 Days": "5 jours",
     "6 Days": "6 jours",
-    "> 14 Days": "> 14 jours"
+    "> 14 Days": "> 14 jours",
+    "Data coverage": "Période de couverture des données",
+    "Coverage": "Couverture"
   }
